--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-
+        {% if produtos %}
         <h1>Produtos</h1>
         <table class="table table-dark">
             <thead>  
@@ -47,6 +47,9 @@
                 {% endfor%}
             </tbody>
         </table>
+        {% else %}
+        <h2>Ainda não existem produtos cadastrados... :(</h2>
+        {% endif %}
 
         
     </div>
